cert-manager/cert-manager-ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: cert-manager
  labels:
    certmanager.k8s.io/disable-validation: "true"
    cert-manager.io/disable-validation: "true"
