cert-manager/cert-gw.yaml
apiVersion: v1
items:
- apiVersion: networking.istio.io/v1alpha3
  kind: Gateway
  metadata:
    labels:
      app: ingressgateway
    name: wc-gateway
    namespace: istio-system
  spec:
    selector:
      istio: ingressgateway
    servers:
    - hosts:
      - '*'
      port:
        name: http
        number: 80
        protocol: HTTP
      tls:
        httpsRedirect: true
    - hosts:
      - '*'
      port:
        name: https-default
        number: 443
        protocol: HTTPS
      tls:
        credentialName: selfsigned-issuer
        mode: SIMPLE
        privateKey: sds
        serverCertificate: sds    
kind: List
